<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/login_root">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_red"
        android:titleTextColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/register_msg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="bottom|center_horizontal"
        android:textColor="@color/my_red"
        android:text="@string/register_test_err_msg"
        android:layout_below="@+id/toolbar"/>

    <LinearLayout
        android:id="@+id/login_phone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_msg"
        android:layout_marginTop="20dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_ph_ex"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="#000"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/ph_ex"/>
        <EditText
            android:id="@+id/login_ph"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2.2"
            android:textColor="#000"
            android:hint="@string/ph_hint"
            android:textColorHint="@color/grey"
            android:inputType="phone"
            android:singleLine="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

    </LinearLayout>

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/login_phone_ll"
            android:textColor="#000"
            android:hint="@string/login_pwd_hint"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/grey"
            android:text="@string/login_to_register"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="18sp"
            android:background="@color/my_red"/>
    </LinearLayout>
</RelativeLayout>
