<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:id="@+id/register_root">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_red"
        android:titleTextColor="#FFFFFF"/>

    <LinearLayout
        android:id="@+id/register_phone_ll"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/register_ph_ex"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/ph_ex"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_ph_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.2"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/ph_hint"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/RedText"
            >
            <EditText
                android:id="@+id/register_ph"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/ph_hint"
                android:textColorHint="@color/grey"
                android:inputType="phone"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_pwd_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@+id/register_phone_ll"
        android:hint="@string/login_pwd_hint"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/RedText"
        >
        <EditText
            android:id="@+id/register_pwd"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_pwd_hint"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/my_red"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
